[tool.poetry]
name = "timing"
version = "0.1.0"
description = ""
authors = ["Arash Fatahzade <fatahzade@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^1.3.18"
falcon = "^2.0.0"
gunicorn = "^20.0.4"
mysqlclient = "^2.0.1"
msgpack = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
msgpack = "^1.0.0"
locust = "^1.1.1"
geventhttpclient = "^1.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
